# restclient_proj

./: pyproject.toml
docs/: conf.py  index.rst
src/restclient/: __main__.py  cli.py  client.py  util.py
