[tool.poetry]
name = "restclient"
version = "0.1.0"
description = ""
authors = ["Suheel Hussain <shussain@ttsiglobal.com>"]
readme = "README.md"
packages = [{include = "restclient", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[tool.poetry.scripts]
restclient = "restclient.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
